istio/manifests/namespaces/istio-system/Istio/istio-ingressgateway-internal-authorizationpolicy.yaml
# Source: Istio/templates/internal-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-internal
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway-internal
  rules:
    - when:
        - key: request.auth.audiences
          values:
            - 189522423084-6opace55ro8aeqqgjsajsm24p6qlis6e.apps.googleusercontent.com
